<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015-2018 Sebastian Kappes

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TV KILL</string>

    <!-- Menu -->
    <string name="menu_universal_mode">Universal Remote</string>
    <string name="menu_repetitive_mode">Repetitive-Mode</string>
    <string name="menu_specific_devices">Brands</string>

    <!-- Transmission progress-dialog -->
    <string name="pd_transmission_in_progress">Transmitting patterns…</string>
    <string name="pd_please_wait">Please wait…</string>

    <!-- Transmission toast -->
    <string name="toast_transmission_initiated">Transmitting patterns…</string>
    <string name="toast_transmission_completed">Transmission completed!</string>

    <!-- Blaster Found toast -->
    <string name="toast_found">IR blaster found</string>
    <!-- USB blaster toasts -->
    <string name="toast_USB_found">USB IR blaster found</string>
    <string name="toast_USB_detached">USB IR blaster detached</string>
    <string name="toast_USB_error">Error during setup of USB IR blaster</string>
    <!-- Not found dialog -->
    <string name="blaster_dialog_title">No IR blaster</string>
    <string name="blaster_dialog_body">To turn off the devices your smartphone must be equipped with a built-in infrared emitter.</string>
    <string name="learn_more">Learn more</string>
    <string name="ok">OK</string>
    <string name="blaster_dialog_more_blaster_url" translatable="false">https://en.wikipedia.org/wiki/List_of_devices_with_IR_blaster#Smartphones</string>

    <!-- Repetitive-Mode spinner items-->
    <string name="allBrands">All Brands</string>

    <!-- Repetitive-Mode started/stopped toast -->
    <string name="toast_mode_started">Repetitive-Mode started</string>
    <string name="toast_mode_stopped">Repetitive-Mode stopped</string>

    <!-- Individual-Remote buttons -->
    <string name="off" translatable="false">OFF</string>
    <string name="mute">MUTE</string>

    <!-- Active-string in notification and dialog -->
    <string name="mode_running">Repetitive-Mode active</string>

    <!-- Mode-running dialog -->
    <string name="dialog_running_body">You can\'t use this mode while the repetitive-Mode is running.</string>
    <string name="dialog_running_stop_mode">Stop repetitive-mode</string>

    <!-- strings for multiple usage -->
    <string name="cancel">Cancel</string>
    <string name="stop">STOP</string>

    <!-- Help dialogs -->
    <string name="help_universal_mode">It is a universal remote control. You can turn off any device by pointing your smartphone at it and pressing the red button. The smartphone will transmit a variety of infrared signals from various brands for this purpose.</string>
    <string name="help_repetitive_mode">This mode works just like the universal-mode, only that your phone will transmit the IR-patterns over and over again once you have pressed the button. It will also continue to transmit when you close the application or lock your phone\'s screen. To stop the repetitive-mode, just press the button a second time.</string>
    <string name="help_individual_mode">You can turn off specific brand devices here.</string>
    <string name="got_it">Got it</string>

    <!-- transmission information individual-mode -->

    <!-- Preference Strings -->
    <string name="category_appearance">Appearance</string>
    <string name="category_transmission">Pattern transmission</string>
    <string name="show_verbose">Additional progress information</string>
    <string name="show_verbose_summary">Show additional information (such as the pattern currently being transmitted) in the progress dialog when transmitting all patterns.</string>
    <string name="depth">Additional patterns</string>
    <string name="depth_summary">"Increases the probability that a device is turned off, but also the duration of the transmission. If disabled: only emits the first known signal for each brand. "</string>
    <string name="delay">Delay between patterns (in milliseconds)</string>
    <string name="delay_summary">Some receivers misinterpret commands when multiple signals are sent one after the other. You can adjust the delay between different signals here to avoid misinterpretation.</string>
    <string name="show_mute">Show mute-button (Experimental)</string>
    <string name="old_dialog">Simplified progress dialog</string>
    <string name="old_dialog_summary">Use the old circular progress dialog</string>
    <string name="category_pattern_db">Pattern database</string>
    <string name="pattern_db_file_title">Open a JSON pattern file</string>
    <string name="custom_pattern_db_checkbox_title">Use custom database</string>
    <string name="custom_pattern_db_checkbox_summary">Loading such a file will allow you to use your own signals. Please note that this option requires a restart of the application.</string>
    <string name="json_not_valid">The chosen file doesn\'t contain JSON data</string>

</resources>
