<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015-2018 Sebastian Kappes

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_appearance">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_verbose"
            android:summary="@string/show_verbose_summary"
            android:title="@string/show_verbose" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="old_dialog"
            android:summary="@string/old_dialog_summary"
            android:title="@string/old_dialog" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_mute"
            android:title="@string/show_mute" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_transmission">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="depth"
            android:summary="@string/depth_summary"
            android:title="@string/depth" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="delay"
            android:numeric="integer"
            android:summary="@string/delay_summary"
            android:title="@string/delay" />

    </PreferenceCategory>

</PreferenceScreen>