<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".UnsupportedFragment">

    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/blaster_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/blaster_dialog_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/learnMore"
        android:text="@string/learn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>