<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="additionalPatternsEnabled"
            type="Boolean" />

        <variable
            name="showDetailsEnabled"
            type="Boolean" />

        <variable
            name="muteButtonEnabled"
            type="Boolean" />

        <variable
            name="delayBetweenPatterns"
            type="Integer" />

        <variable
            name="handlers"
            type="com.redirectapps.tvkill.SettingsFragmentHandlers" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivityFragment"
        tools:showIn="@layout/activity_settings">
        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:onClick="@{() -> handlers.setEnableAdditionalPatterns(!safeUnbox(additionalPatternsEnabled))}"
                android:foreground="?selectableItemBackground"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(additionalPatternsEnabled) ? View.GONE : View.VISIBLE}"
                        tools:visibility="gone"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOff"
                        android:src="@drawable/ic_check_box_outline_blank_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(additionalPatternsEnabled) ? View.VISIBLE : View.GONE}"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOn"
                        android:src="@drawable/ic_check_box_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textAppearance="?android:textAppearanceLarge"
                            android:text="@string/depth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textAppearance="?android:textAppearanceMedium"
                            android:text="@string/depth_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:onClick="@{() -> handlers.setEnableMuteButton(!safeUnbox(muteButtonEnabled))}"
                android:foreground="?selectableItemBackground"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(muteButtonEnabled) ? View.GONE : View.VISIBLE}"
                        tools:visibility="gone"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOff"
                        android:src="@drawable/ic_check_box_outline_blank_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(muteButtonEnabled) ? View.VISIBLE : View.GONE}"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOn"
                        android:src="@drawable/ic_check_box_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:text="@string/show_mute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:onClick="@{() -> handlers.setEnableShowDetails(!safeUnbox(showDetailsEnabled))}"
                android:foreground="?selectableItemBackground"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(showDetailsEnabled) ? View.GONE : View.VISIBLE}"
                        tools:visibility="gone"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOff"
                        android:src="@drawable/ic_check_box_outline_blank_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(showDetailsEnabled) ? View.VISIBLE : View.GONE}"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOn"
                        android:src="@drawable/ic_check_box_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:text="@string/show_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(delayBetweenPatterns) > 0 ? View.GONE : View.VISIBLE}"
                        tools:visibility="gone"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOff"
                        android:src="@drawable/ic_check_box_outline_blank_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:visibility="@{safeUnbox(delayBetweenPatterns) > 0 ? View.VISIBLE : View.GONE}"
                        android:padding="16dp"
                        android:tint="@color/checkBoxOn"
                        android:src="@drawable/ic_check_box_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textAppearance="?android:textAppearanceLarge"
                            android:text="@string/delay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textAppearance="?android:textAppearanceMedium"
                            android:text="@string/delay_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <SeekBar
                                android:onProgressChanged="@{(view, value, fromUser) -> fromUser ? handlers.setDelayBetweenPatterns(value * 50) : null}"
                                android:layout_weight="1"
                                android:progress="@{safeUnbox(delayBetweenPatterns) / 50}"
                                android:max="10"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />

                            <TextView
                                tools:text="@string/delay_value"
                                android:text="@{@string/delay_value(safeUnbox(delayBetweenPatterns))}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>